# autoguix

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml  tests.yml
autoguix/: __init__.py
docs/: AutoGUIX_Claude_Code_Guide.md  AutoGUIX_Development_Plan.md  AutoGUIX_System_Design.md  README.md  UV_Migration_Guide.md
examples/: basic_demo.py
pyautox/: __init__.py
pyautox/backends/: __init__.py  macos_backend.py
pyautox/core/: __init__.py  automation_core.py  backend_base.py
tests/: test_core.py  test_macos_backend.py  test_types.py
